deployment/visual-kube-testing.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cpu-demo
spec:
  containers:
  - name: cpu-demo-ctr
    image: visual-kube-app:0.1.0
    resources:
      limits:
        cpu: "2"
      requests:
        cpu: "0.5"
