deployment/visual-kube-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: visual-kube-app
spec:
  type: NodePort
  selector:
    app: visual-kube-app
  ports:
    - port: 80
      targetPort: 3001
      nodePort: 30008
